--- a/app/views/videos/text_tracks/_show.html.haml
+++ b/app/views/videos/text_tracks/_show.html.haml
@@ -27,7 +27,7 @@
 					.p-0{style: "max-height: 60vh"}
 						%video{src: "#{track.video.original_upload.url}", preload: "metadata", width: "100%", controls: "true", playsinline: "true"}
 							%track{kind: "captions", srclang: "en", label: "English", src: video_text_track_captions_path(track.video, track), default: "true"}
-					= render partial: "videos/text_tracks/transcript", locals: {track: track}
+					-#= render partial: "videos/text_tracks/transcript", locals: {track: track}
 		.col-4.overflow-auto{style: "max-height: 92vh"}
 			%turbo-frame{id: "right", data:{turbo:{action: "advance"}}}
 				- if track.cue_blocks.empty?
@@ -36,7 +36,7 @@
 
 						= form_with(model: [track.video, track]) do |f|
 							.row.image-upload.p-4
-								= f.file_field :file_import, accept: "text/vtt, text/srt", onChange: "requestSubmit()"
+								= f.file_field :file_import, accept: "text", onChange: "requestSubmit()"
 								= f.label :file_import, "Import From File", class: "btn btn-dark btn-lg"
 				- else
 					.p-4
