--- a/app/views/videos/cue_blocks/_edit_visual_descriptions.html.haml
+++ b/app/views/videos/cue_blocks/_edit_visual_descriptions.html.haml
@@ -11,10 +11,16 @@
 				.form-floating.mb-4
 					= f.text_field :start, placeholder: "Start Time", class: "form-control border border-dark"
 					= f.label :start, "Start Time"
-				- block.payload.each do |p|
-					.form-floating.mb-4
-						%textarea.border.border-dark.form-control{id: "cue_block_payload_0", placeholder: "Visual Description", name: "cue_block[payload][]", data:{controller: "textarea-autogrow"}} #{p}
-						%label{for: "cue_block_payload_0"} Visual Description
+				- unless block.payload.nil?
+					- block.payload.each do |p|
+						.form-floating.mb-4
+							%textarea.border.border-dark.form-control{id: "cue_block_payload_0", placeholder: "Visual Description", name: "cue_block[payload][]", data:{controller: "textarea-autogrow"}} #{p}
+							%label{for: "cue_block_payload_0"} Visual Description
+					- else
+						.form-floating.mb-4
+							%textarea.border.border-dark.form-control{id: "cue_block_payload_0", placeholder: "Visual Description", name: "cue_block[payload][]", data:{controller: "textarea-autogrow"}}
+							%label{for: "cue_block_payload_0"} Visual Description
+					
 				.form-floating.mb-4
 					= f.text_area :synthesize_text, placeholder: "Synthesize Text to Speech", class: "border border-dark form-control", data:{controller: "textarea-autogrow"}
 					= f.label :synthesize_text, "Synthesize Text to Speech"
