removed variable from second field of chapter

--- a/app/views/videos/cue_blocks/_edit_chapter.html.haml
+++ b/app/views/videos/cue_blocks/_edit_chapter.html.haml
@@ -18,7 +18,7 @@
 							%label{for: "cue_block_payload_#{i}"} Chapter Title
 				- else
 					.form-floating
-						%input.border.border-dark.form-control{id: "cue_block_payload_#{i}", type: "text", placeholder: "Chapter Title", value: p, name: "cue_block[payload][]"}
+						%input.border.border-dark.form-control{id: "cue_block_payload_#{i}", type: "text", placeholder: "Chapter Title", name: "cue_block[payload][]"}
 						%label{for: "cue_block_payload_#{i}"} Chapter Title
 				.row.p-2
 					%input.btn.btn-dark.btn-lg{type: "submit", value: "Save"}
