--- a/app/views/videos/controls/buttons/_settings.html.haml
+++ b/app/views/videos/controls/buttons/_settings.html.haml
@@ -1,3 +1,3 @@
 .p-2
 	%button#settingsButton.btn.btn-lg.btn-dark.border.border-light{type: "button", data: {action: "click->video-container#toggleSettings", bs:{toggle: "tooltip", title: "Settings (s)", placement: "top"}, video: {container: {target: "settingsButton"}}}}
-		%i.bi.bi-gear-fill
+		%i.bi.bi-gear-fill{aria: {hidden: "true"}}
