--- a/app/views/videos/controls/buttons/_play_pause.html.haml
+++ b/app/views/videos/controls/buttons/_play_pause.html.haml
@@ -1,4 +1,4 @@
 .p-2
-	%button#playButton.btn.btn-lg.btn-dark.border.border-light{type: "button", data:{action: "click->video-container#playPause", bs: {toggle: "tooltip", placement: "top", title: "Play (k)"}, video:{container: {target: "playButton"}}}}
+	%button#playButton.btn.btn-lg.btn-dark.border.border-light{type: "button", title: "Play (k)", data:{action: "click->video-container#playPause keydown.k@document->video-container#playPause keydown.space@document->video-container#playPause:prevent", bs: {toggle: "tooltip", placement: "top", title: "Play (k)"}, video:{container: {target: "playButton"}}}}
 		%i.bi.bi-play-fill{aria: {hidden: "true"}, data: {video: {container: {target: "playButtonIcon"}}}}
 	
