--- a/app/views/videos/controls/buttons/_fs.html.haml
+++ b/app/views/videos/controls/buttons/_fs.html.haml
@@ -1,3 +1,3 @@
 .p-2
-	%button#fsButton.btn.btn-lg.btn-dark.border.border-light{type: "button", title: "Enter Fullscreen (f)", data: {action: "click->video-container#toggleFs keydown.f@document->video-container#toggleFs", bs:{toggle: "tooltip", title: "Enter Fullscreen (f)", placement: "top"}, video: {container: {target: "fsButton"}}}}
+	%button#fsButton.btn.btn-lg.btn-dark.border.border-light{type: "button", aria: {label: "Enter Fullscreen (f)"}, data: {action: "click->video-container#toggleFs keydown.f@document->video-container#toggleFs", bs:{toggle: "tooltip", title: "Enter Fullscreen (f)", placement: "top"}, video: {container: {target: "fsButton"}}}}
 		%i.bi.bi-fullscreen{data: {video: {container: {target: "fsButtonIcon"}}}}
