--- a/app/views/videos/controls/buttons/_settings.html.haml
+++ b/app/views/videos/controls/buttons/_settings.html.haml
@@ -1,7 +1,7 @@
 .p-2.dropup
-	%button#settingsButton.btn.btn-lg.btn-dark.border.border-light{type: "button", title: "Settings (s)", aria: {expanded: "false"}, data: {action: "click->video-container#toggleSettings keydown.s@document->video-container#toggleSettings", bs:{toggle: "tooltip", toggle: "dropdown", title: "Settings (s)", placement: "top"}, video: {container: {target: "settingsButton"}}}}
+	%button#settingsButton.btn.btn-lg.btn-dark.border.border-light{type: "button", title: "Settings (s)", aria: {controls: "#settingsMenu", expanded: "false"}, data: {action: "click->video-container#toggleSettings keydown.s@document->video-container#toggleSettings", bs:{toggle: "tooltip", toggle: "dropdown", title: "Settings (s)", placement: "top"}, video: {container: {target: "settingsButton"}}}}
 		%i.bi.bi-gear-fill{aria: {hidden: "true"}}
-	%ul.dropdown-menu.dropdown-menu-end.border.border-dark
+	%ul#settingsMenu.dropdown-menu.dropdown-menu-end.border.border-dark
 		%li.mb-0
 			.dropdown-item Audio Descriptions
 		%li.mb-0
