--- a/app/views/videos/controls/buttons/_settings.html.haml
+++ b/app/views/videos/controls/buttons/_settings.html.haml
@@ -3,7 +3,7 @@
 		%i.bi.bi-gear-fill{aria: {hidden: "true"}}
 	%ul#settingsMenu.dropdown-menu.dropdown-menu-end.border.border-dark
 		%li.mb-0
-			%button#adMenuButton.dropdown-item.btn.btn-outline-dark.btn-lg{type: "button"} Audio Descriptions
+			%button#adMenuButton.dropdown-item.btn.btn-outline-dark.btn-lg{type: "button", data: {video: {container: {target: "adMenuButton"}}}} Audio Descriptions
 		%li.mb-0
 			.dropdown-item Subtitles / Captions
 		%li.mb-0
