--- a/app/views/videos/controls/_control_bar.html.haml
+++ b/app/views/videos/controls/_control_bar.html.haml
@@ -3,7 +3,7 @@
 	= render partial: "videos/controls/time_range"
 	= render partial: "videos/controls/buttons/cc"
 	= render partial: "videos/controls/buttons/ad"
-	= render partial: "videos/controls/buttons/settings"
+	= render partial: "videos/controls/buttons/settings", locals: {video: video}
 	= render partial: "videos/controls/buttons/cast"
 	= render partial: "videos/controls/buttons/pip"
 	= render partial: "videos/controls/buttons/fs"
