--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -13,9 +13,8 @@
 
 			.border.border-dark.p-4
 				%label.form-label.mb-4{for: "speakingRate"} Speaking Rate
-				%input.slider{id: "speakingRate", type: "range", min: "0", max: "2", step: "0.1", data: {controller: "slider", action: "mouseup->slider#maintainFocus input->slider#updateValueText", slider: {text_value: "Percent"}}}}
-
-
+				%input.slider{id: "speakingRate", type: "range", min: "0", max: "2", step: "0.1", data: {controller: "slider", action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {text_value: "Percent"}}}
+			
 			%h1.mb-4 #{video.title}	
 			%p Your browser currently supports the following voices for SpeechSynthesis API
 			#englishUS
