added homepage update

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -3,7 +3,13 @@
 		%a.navbar-brand{href: "#", style: "color: gold"} 
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
 			ILY by Tricio
-.container.pt-4
+.container-xl.pt-4
+	%h1 Welcome!
+	%p New Homepage is coming soon.  However, you can checkout products for our upcoming special event on april 22nd, 2023.
+
+	%a.btn.btn-dark.btn-lg{href: special_event_path} See Products
+
+.d-none.container.pt-4
 	%h1.text-center Products
 	.row.mb-4
 		.col-6.col-lg-4.mt-4
