updated special event

--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -27,21 +27,21 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 5rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Raisin Cookie
 					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3I3V7UADGUFKAHKBH4AEITWC", role: "button"} 6 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/RUS5MNN6XO4VDTPM4XSSP4DI", role: "button"} 6 for $10
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/KDRBVDEQJLFKEAEXGYE4AEUT", role: "button"} 12 for $20
 					
 		.col-12.col-md-6.col-lg-4.mt-4.mx-auto
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/peanut-butter-cookie.png", width: "100%", alt: ""}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/mm_cookie.png", width: "100%", alt: ""}
 				.card-body
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 5rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Peanut Butter Cookie
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 M&M Candy Cookie
 					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/RUS5MNN6XO4VDTPM4XSSP4DI", role: "button"} 6 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/MLI2T7KKYHUCZTAHRP3GOWSK", role: "button"} 6 for $10
 					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/FVIO5GTPTEUFEQCW465RLCO6", role: "button"} 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/NM7SYIEEPJR7QP6YRYYVHMT2", role: "button"} 12 for $20
 					
 		
 
