working on tick marks on slider

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -95,6 +95,10 @@ li {
   outline-offset: 0.125rem;     
 }
 
+.modal-backdrop {
+	--bs-backdrop-opacity: 1
+}
+
 @media (inverted-colors: inverted) {
 	.background-dark {
 		background: white;
