--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -43,7 +43,20 @@
 			.border.border-dark.p-4
 				%label.form-label.mb-4{for: "pitch"} Pitch
 				.d-flex.p-2{data: {controller: "slider", slider: {text_value: "Percent"}}}
-					%input.slider.flex-grow-1{id: "pitch", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
+					.flex-grow-1
+						.ticks
+							%span.tick 
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+							%span.tick
+						%input.slider{id: "pitch", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
 					%output.p-2.ms-4.bg-dark.text-light.align-self-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}}
 			.border.border-dark.p-4
 				%label.form-label.mb-4{for: "volume"} Volume
