--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -13,56 +13,31 @@
 
 			.border.border-dark.p-4
 				%label.form-label.mb-4{for: "speakingRate"} Speaking Rate
-				.d-flex.p-2{data: {controller: "slider", slider: {text_value: "Percent"}}}
-					%input.flex-grow-1{id: "speakingRate", type: "range", list: "speakingRateTicks", min: "0", max: "2", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
-					%datalist{id: "speakingRateTicks"}
-						%option 0
-						%option 0.1
-						%option 0.2
-						%option 0.3
-						%option 0.4
-						%option 0.5
-						%option 0.6
-						%option 0.7
-						%option 0.8
-						%option 0.9
-						%option 1.0
-						%option 1.1
-						%option 1.2
-						%option 1.3
-						%option 1.4
-						%option 1.5
-						%option 1.6
-						%option 1.7
-						%option 1.8
-						%option 1.9
-						%option 2.0
-						
-						
-					%output.p-2.ms-4.bg-dark.text-light.align-self-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}}
-			.border.border-dark.p-4
-				%label.form-label.mb-4{for: "pitch"} Pitch
-				.d-flex.p-2{data: {controller: "slider", slider: {text_value: "Percent"}}}
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
 					.flex-grow-1
 						.ticks
-							%span.tick 
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
-							%span.tick
+							- 21.times do
+								%span.tick 
+						%input.slider{id: "speakingRate", type: "range", min: "0", max: "2", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}	
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
+			.border.border-dark.p-4
+				%label.form-label.mb-4{for: "pitch"} Pitch
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
+					.flex-grow-1
+						.ticks
+							- 11.times do
+								%span.tick 
 						%input.slider{id: "pitch", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
-					%output.p-2.ms-4.bg-dark.text-light.align-self-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}}
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
 			.border.border-dark.p-4
 				%label.form-label.mb-4{for: "volume"} Volume
-				.d-flex.p-2{data: {controller: "slider", slider: {text_value: "Percent"}}}
-					%input.slider.flex-grow-1{id: "volume", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
-					%output.p-2.ms-4.bg-dark.text-light.align-self-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}}
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
+					.flex-grow-1
+						.ticks
+							- 11.times do
+								%span.tick 
+						%input.slider{id: "volume", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
 				
 			
 			%h1.mb-4 #{video.title}	
