--- a/app/views/content/blocks/_paragraph.html.haml
+++ b/app/views/content/blocks/_paragraph.html.haml
@@ -13,4 +13,5 @@
 			%button.btn.btn-outline-dark{type: "button", data: {content_block_target: "toolbarP"}}
 				%i.bi.bi-paragraph
 					
-	%p{contenteditable: true, data: { content_block_target: "contentBlock"}} This is heaven
+	%p{contenteditable: true, data: { content_block_target: "contentBlock"}} 
+		You are position #{@position} in this content.
