updated content editable

--- a/app/views/content/blocks/_paragraph.html.haml
+++ b/app/views/content/blocks/_paragraph.html.haml
@@ -14,4 +14,4 @@
 				%i.bi.bi-paragraph
 					
 	%p{contenteditable: true, data: { content_block_target: "contentBlock"}} 
-		You are position #{@position} in this content.
+		You are position #{@position} in this content. You can go to <a href="https://www.facebook.com" target: "_blank">Facebook</a> in a new tab.
